--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <div class="wrapper">
       <header class="sidebar">
         <a href="{{ site.baseurl }}/">
-          <img class="logo" src="/pyRevitLogo.svg">
+          <img class="logo" src="{{ "/pyRevitLogo.svg" | prepend: site.baseurl }}">
         </a>
         <p><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></p>
 
