--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         <p>{{ site.description }}</p>
 
         <ul>
-          <li><a href="https://github.com/eirannejad/pyRevit/releases/download/v2Setup/pyRevitPackage.zip">Download <strong>Installer</strong></a></li>
+          <li><a href="https://github.com/eirannejad/pyRevit/releases/download/v3betaSetup/pyRevitSetup-v3beta.exe">Download <strong>Installer</strong></a></li>
           <li><a href="https://github.com/eirannejad/pyRevit">View On <strong>GitHub</strong></a></li>
         </ul>
 
