Added link to docs site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 
         <ul>
           <li><a href="https://github.com/eirannejad/pyRevit/releases/download/v4.0-stable/pyRevitSetup-v4.exe">Download <strong>Installer</strong></a></li>
+          <li><a href="http://pyrevit.readthedocs.io">Read the<br/><strong>Docs</strong></a></li>
           <li><a href="https://github.com/eirannejad/pyRevit">View On <strong>GitHub</strong></a></li>
         </ul>
 
