Revised code block background

--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,7 @@ $on-laptop:        980px;
         "layout",
         "syntax-highlighting"
 ;
+
+
+.highlighter-rouge .highlight { background: #f6f6f6; }
+pre, code { font-size: 15px; border: 1px solid #e8e8e8; border-radius: 2px; background-color: #f6f6f6; }
