Added youtube and patreon links
Misc cosmetic changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,25 @@
 
         <p>{{ site.description }}</p>
 
-        <ul>
+        <ul class="main">
           <li>
             <a href="https://github.com/eirannejad/pyRevit/releases/download/v4.3/pyRevitSetup-v4.exe">
               Download <strong>Installer</strong>
             </a>
           </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UC-0THIvKRd6n7T2a5aKYaGg">
+              Watch<br/><strong>Tutorials</strong>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.patreon.com/pyrevit">
+              Become a<br/><strong>Patreon</strong>
+            </a>
+          </li>
+        </ul>
+
+        <ul>
           <li>
             <a href="http://pyrevit.readthedocs.io">
               Read the<br/><strong>Docs</strong>
