--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,9 @@
 <!doctype html>
+
+<head>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+</head>
+
 <html>
 {% include head.html %}
   <body>
