Corrected blockquote style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,9 +110,11 @@ a {
  * Blockquotes
  */
 blockquote {
-    color: #999;
-    border-left: 8px solid #999;
+    color: $grey-color;
+    border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
+    font-size: 18px;
+    letter-spacing: -1px;
     font-style: italic;
 
     > :last-child {
