--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
   <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/x-icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
   <link rel="apple-touch-icon" sizes="114x114" href="{{ "/apple-icon-114x114.png" | prepend: site.baseurl }}" />
+  {% seo %}
 </head>
