--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,11 +68,11 @@
 
       <footer class="sidebar">
         <p><small>
-          Supported by JetBrains
+          <!-- Supported by JetBrains
           <a href="https://www.jetbrains.com">
             <img src="{{ "/images/jetbrains_logos/logo-variant-4.svg" | prepend: site.baseurl }}"
                  width="86px" style="margin-top:-28px;">
-          </a><br>
+          </a><br> -->
           Created by <a href="https://github.com/eirannejad">eirannejad</a>
           subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a><br>
           Powered by GitHub Pages and Jekyll<br>
