--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
         <ul class="main">
           <li>
-            <a href="https://github.com/eirannejad/pyRevit/releases/download/v4.5/pyRevitSetup-v45.exe">
+            <a href="https://github.com/eirannejad/pyRevit/releases">
               Download <strong>Installer</strong>
             </a>
           </li>
