--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
             </p>
             {% endif %}
           {% endfor %}
+          <p class="menu-item">
+            <a class="page-link" href="https://github.com/eirannejad/pyRevit/blob/master/CREDITS.md">Credits</a>
+          </p>
         </div>
         <p></p>
       </header>
