--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,15 +32,36 @@
           </li>
         </ul>
 
-        <ul>
+        <ul class="mainpyrevit">
           <li>
             <a href="http://pyrevit.readthedocs.io">
-              Read the<br/><strong>Docs</strong>
+              Read<br/><strong>Docs</strong>
             </a>
           </li>
+
+          <li>
+            <a href="https://github.com/eirannejad/pyRevit/issues">
+              Report<br/><strong>Issues</strong>
+            </a>
+          </li>
+
           <li>
             <a href="https://github.com/eirannejad/pyRevit">
               View On <strong>GitHub</strong>
+            </a>
+          </li>
+        </ul>
+
+        <ul class="maincli">
+          <li>
+            <a href="https://github.com/eirannejad/pyRevitLabs/blob/master/README_CLI.md">
+              Read<br/><strong>CLI Docs</strong>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://github.com/eirannejad/pyRevitLabs/issues">
+              Report<strong>CLI Issues</strong>
             </a>
           </li>
         </ul>
