Added copyright notice

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,12 @@ layout: default
     {{ content }}
   </div>
 
+  <footer>
+    <hr>
+    <small>Copyright &#9400; 2016-2019 by Ehsan Iran-Nejad (eirannejad.github.io/pyRevit) - All Rights Reserved</small>
+    <br>
+    <small>No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the publisher.</small>
+  </footer>
 </article>
 
 
